Added SSLSocketListener. The SSLSocket has been modified to support SSLSocketListener which will be invoked when an SSL alert has been sent or received, also when an SSL handshake has been completed.

https://bugzilla.mozilla.org/show_bug.cgi?id=1348856